--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -62,6 +62,21 @@
                             </fieldset>
                         </div>
                         <div class="col-md-3 col-sm-12 col-xs-12">
+                            <label>Gender <span class="text-danger">*</span></label>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
+                            <fieldset>
+                                <fieldset>
+                                    <select formControlName="gender" class="form-control"  placeholder="Select Gender">
+                                        <option value="" disabled selected>Select Gender</option>
+                                        <option value="">Male</option>
+                                        <option value="">Female</option>
+                                        <option value="">Others</option>
+                                    </select>
+                                </fieldset>
+                            </fieldset>
+                        </div>
+                        <div class="col-md-3 col-sm-12 col-xs-12">
                             <label>Email <span class="text-danger">*</span></label>
                         </div>
                         <div class="col-md-3 col-sm-12 col-xs-12">
@@ -159,7 +174,7 @@
                             </div>
 
                             <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
-                                <label>Address Line 1 <span class="text-danger"></span></label>
+                                <label>Address Line 1 <span class="text-danger">*</span></label>
                             </div>
                             <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
                                 <fieldset>
@@ -168,7 +183,7 @@
                             </div>
 
                             <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
-                                <label>Address Line 2 <span class="text-danger"></span></label>
+                                <label>Address Line 2 <span class="text-danger">*</span></label>
                             </div>
                             <div class="col-md-3 col-sm-12 col-xs-12" *ngIf="isValidPin">
                                 <fieldset>
@@ -232,7 +247,7 @@
                     <h5 class="text-left mb-3">ID proofs</h5>
                     <div class="row col-md-12 align-items-center">
                         <div class="col-md-2">
-                            <label> Photo Id</label>
+                            <label> Photo Id <span class="text-danger">*</span></label>
                         </div>
                         <div class="col-md-2">
                             <select formControlName="photoid_proof" class="form-control">
@@ -246,7 +261,7 @@
                         </div>
 
                         <div class="col-md-2">
-                            <label> Address Id</label>
+                            <label> Address Id <span class="text-danger">*</span></label>
                         </div>
                         <div class="col-md-2">
                                 <select formControlName="addressid_proof" class="form-control">
@@ -263,7 +278,7 @@
                 <div class="card application">
                     <div class="row col-md-12 align-items-center">
                         <div class="col-md-3">
-                            <label>Image</label>
+                            <label>Image<span class="text-danger">*</span></label>
                         </div>
                         <div class="col-md-3 cust-padding">
                             <input type="file" class="form-control" accept='image/*'
