--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -69,9 +69,9 @@
                                 <fieldset>
                                     <select formControlName="gender" class="form-control"  placeholder="Select Gender">
                                         <option value="" disabled selected>Select Gender</option>
-                                        <option value="">Male</option>
-                                        <option value="">Female</option>
-                                        <option value="">Others</option>
+                                        <option value="Male">Male</option>
+                                        <option value="Female">Female</option>
+                                        <option value="Others">Others</option>
                                     </select>
                                 </fieldset>
                             </fieldset>
